force-app/main/default/objects/DIR_Case__c/fields/Court_Name__c.field-meta.xml
<CustomField>
    <fullName>Court_Name__c</fullName>
    <inlineHelpText>If selecting Other / Specify, please enter the court name in the Court Name for PAGA Case field.</inlineHelpText>
    <label>Court Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Court_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alameda County Superior Court</fullName>
            </value>
            <value>
                <fullName>Alpine County Superior Court</fullName>
            </value>
            <value>
                <fullName>Amador County Superior Court</fullName>
            </value>
            <value>
                <fullName>Butte County Superior Court</fullName>
            </value>
            <value>
                <fullName>Calaveras County Superior Court</fullName>
            </value>
            <value>
                <fullName>Colusa County Superior Court</fullName>
            </value>
            <value>
                <fullName>Contra Costa County Superior Court</fullName>
            </value>
            <value>
                <fullName>Del Norte County Superior Court</fullName>
            </value>
            <value>
                <fullName>El Dorado County Superior Court</fullName>
            </value>
            <value>
                <fullName>Fresno County Superior Court</fullName>
            </value>
            <value>
                <fullName>Glenn County Superior Court</fullName>
            </value>
            <value>
                <fullName>Humboldt County Superior Court</fullName>
            </value>
            <value>
                <fullName>Imperial County Superior Court</fullName>
            </value>
            <value>
                <fullName>Inyo County Superior Court</fullName>
            </value>
            <value>
                <fullName>Kern County Superior Court</fullName>
            </value>
            <value>
                <fullName>Kings County Superior Court</fullName>
            </value>
            <value>
                <fullName>Lake County Superior Court</fullName>
            </value>
            <value>
                <fullName>Lassen County Superior Court</fullName>
            </value>
            <value>
                <fullName>Los Angeles County Superior Court</fullName>
            </value>
            <value>
                <fullName>Madera County Superior Court</fullName>
            </value>
            <value>
                <fullName>Marin County Superior Court</fullName>
            </value>
            <value>
                <fullName>Mariposa County Superior Court</fullName>
            </value>
            <value>
                <fullName>Mendocino County Superior Court</fullName>
            </value>
            <value>
                <fullName>Merced County Superior Court</fullName>
            </value>
            <value>
                <fullName>Modoc County Superior Court</fullName>
            </value>
            <value>
                <fullName>Mono County Superior Court</fullName>
            </value>
            <value>
                <fullName>Monterey County Superior Court</fullName>
            </value>
            <value>
                <fullName>Napa County Superior Court</fullName>
            </value>
            <value>
                <fullName>Nevada County Superior Court</fullName>
            </value>
            <value>
                <fullName>Orange County Superior Court</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>