force-app/main/default/objects/DIR_Case__c/fields/Court_Name_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>Court_Name_Other_Specify__c</fullName>
    <label>Other/Specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>