force-app/main/default/objects/DIR_Case__c/fields/Court_Type__c.field-meta.xml
<CustomField>
    <fullName>Court_Type__c</fullName>
    <label>Court Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California Appellate Courts</fullName>
            </value>
            <value>
                <fullName>California Superior Courts</fullName>
            </value>
            <value>
                <fullName>Federal Courts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>