force-app/main/default/objects/DIR_Case__c/fields/COVID_19__c.field-meta.xml
<CustomField>
    <fullName>COVID_19__c</fullName>
    <label>COVID 19</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>