force-app/main/default/objects/DIR_Case__c/fields/CP__c.field-meta.xml
<CustomField>
    <fullName>CP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For VNO clean up</description>
    <label>CP</label>
    <type>Checkbox</type>
</CustomField>