force-app/main/default/objects/DIR_Case__c/fields/CreatedFromFA__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromFA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track if the Case was created in FA</description>
    <label>CreatedFromFA</label>
    <type>Checkbox</type>
</CustomField>