force-app/main/default/objects/DIR_Case__c/fields/Cure_Dispute_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Cure_Dispute_Submission_Date__c</fullName>
    <description>Date the Cure Dispute was submitted online.</description>
    <inlineHelpText>Date the Cure Dispute was submitted online.</inlineHelpText>
    <label>Cure Dispute Submission Date</label>
    <type>Date</type>
</CustomField>