force-app/main/default/objects/DIR_Case__c/fields/Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned__c</fullName>
    <description>Date when case was assigned to Deputy</description>
    <label>Date Assigned</label>
    <type>Date</type>
</CustomField>