force-app/main/default/objects/DIR_Case__c/fields/Date_Calculation_Test__c.field-meta.xml
<CustomField>
    <fullName>Date_Calculation_Test__c</fullName>
    <formula>&quot;test&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Calculation Test</label>
    <type>Text</type>
</CustomField>