force-app/main/default/objects/DIR_Case__c/fields/Date_Case_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Received__c</fullName>
    <description>Date Case Received</description>
    <label>Date Case Received</label>
    <type>Date</type>
</CustomField>