force-app/main/default/objects/DIR_Case__c/fields/Date_extension_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_extension_letter_sent__c</fullName>
    <description>Date of letter extending investigation by 60 days.</description>
    <inlineHelpText>Date of letter extending investigation by 60 days.</inlineHelpText>
    <label>Date extension letter sent</label>
    <type>Date</type>
</CustomField>