force-app/main/default/objects/DIR_Case__c/fields/Date_Judgment_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Judgment_Received__c</fullName>
    <label>Date Order or Judgment Received</label>
    <type>Date</type>
</CustomField>