force-app/main/default/objects/DIR_Case__c/fields/Date_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Date_Mailed__c</fullName>
    <label>Date Mailed</label>
    <type>Date</type>
</CustomField>