force-app/main/default/objects/DIR_Case__c/fields/Date_of_Dismissal__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Dismissal__c</fullName>
    <description>This will be the date when the Case Management Status changes to Dismissed, required field, and when a user changes the status to dismissed, they are required to complete the date.</description>
    <label>Date of Dismissal</label>
    <type>Date</type>
</CustomField>