force-app/main/default/objects/DIR_Case__c/fields/Date_of_IC_determination_pre_hearing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_IC_determination_pre_hearing__c</fullName>
    <description>Date of IC determination pre-hearing</description>
    <label>Date of IC determination (pre-hearing)</label>
    <type>Date</type>
</CustomField>