force-app/main/default/objects/DIR_Case__c/fields/Date_of_proposed_settlement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_proposed_settlement__c</fullName>
    <label>Date of proposed settlement</label>
    <type>Date</type>
</CustomField>