force-app/main/default/objects/DIR_Case__c/fields/Date_Referred_to_Outside_Agency__c.field-meta.xml
<CustomField>
    <fullName>Date_Referred_to_Outside_Agency__c</fullName>
    <inlineHelpText>Enter the date the case referred to the outside agency</inlineHelpText>
    <label>Date Referred to Outside Agency</label>
    <type>Date</type>
</CustomField>