force-app/main/default/objects/DIR_Case__c/fields/DateDeterminationSigned__c.field-meta.xml
<CustomField>
    <fullName>DateDeterminationSigned__c</fullName>
    <label>Date Determination Signed</label>
    <type>Date</type>
</CustomField>