force-app/main/default/objects/DIR_Case__c/fields/DateDeterminationSignedtoAppealed__c.field-meta.xml
<CustomField>
    <fullName>DateDeterminationSignedtoAppealed__c</fullName>
    <description>Used for Reporting</description>
    <formula>AppealedDate__c - DateDeterminationSigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Determination Signed to Appealed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>