force-app/main/default/objects/DIR_Case__c/fields/DateofLastCaseActivity__c.field-meta.xml
<CustomField>
    <fullName>DateofLastCaseActivity__c</fullName>
    <label>Date of Last Case Activity</label>
    <type>Date</type>
</CustomField>