force-app/main/default/objects/DIR_Case__c/fields/Days_Elapsed_Since_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Days_Elapsed_Since_Assigned__c</fullName>
    <formula>Date_Assigned__c - TODAY ()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Elapsed Since Assigned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>