force-app/main/default/objects/DIR_Case__c/fields/Days_from_Docket_to_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Docket_to_Resolution__c</fullName>
    <description>Formula to calculate the difference between the Date of Docket and the Resolution Date on the Case MGMT object.</description>
    <formula>Resolution_Date__c -  Date_of_Docket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time that has passed from Docket Date to Resolution Date</inlineHelpText>
    <label>Days from Docket to Resolution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>