force-app/main/default/objects/DIR_Case__c/fields/Days_Since_Re_Opened__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Re_Opened__c</fullName>
    <formula>IF(
(Closed__c=FALSE), TODAY() - Case_Re_Open_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Re-Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>