force-app/main/default/objects/DIR_Case__c/fields/Deposited_Funds__c.field-meta.xml
<CustomField>
    <fullName>Deposited_Funds__c</fullName>
    <description>Populated by &#39;CasePaymentAll&#39; trigger. Totals up all the Case Payments for this Case for which funds were deposited into DLSE Office Accounts.</description>
    <inlineHelpText>Total of deposited Case Payments on this Case.</inlineHelpText>
    <label>Deposited Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>