force-app/main/default/objects/DIR_Case__c/fields/Describe_Outcome_When_Complaint_Filed__c.field-meta.xml
<CustomField>
    <fullName>Describe_Outcome_When_Complaint_Filed__c</fullName>
    <label>Describe Outcome When Complaint Filed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>