force-app/main/default/objects/DIR_Case__c/fields/Determination_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Determination_Issued_Date__c</fullName>
    <label>Determination Issued Date</label>
    <type>Date</type>
</CustomField>