force-app/main/default/objects/DIR_Case__c/fields/Determination_Referring_User__c.field-meta.xml
<CustomField>
    <fullName>Determination_Referring_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Determination Referring User</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Case Management (Determination Referring User)</relationshipLabel>
    <relationshipName>Case_Management2Azx</relationshipName>
    <type>Lookup</type>
</CustomField>