force-app/main/default/objects/DIR_Case__c/fields/Did_Conga_Fire__c.field-meta.xml
<CustomField>
    <fullName>Did_Conga_Fire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did Conga Fire?</label>
    <type>Checkbox</type>
</CustomField>