force-app/main/default/objects/DIR_Case__c/fields/DIR_Accounting_Program__c.field-meta.xml
<CustomField>
    <fullName>DIR_Accounting_Program__c</fullName>
    <description>Some DLSE Programs are the same as others for the purpose of looking up DIR Accounting Codes.</description>
    <formula>&quot;BOFE&quot;</formula>
    <inlineHelpText>This field is used to find a DIR Accounting Code for a DLSE Program that is the same as another for the purpose of reporting to DIR Accounting. This field saves having to setup new Accounting Codes and Applicable Accounting Codes for a new DLSE Program.</inlineHelpText>
    <label>DIR Accounting Program</label>
    <type>Text</type>
</CustomField>