force-app/main/default/objects/DIR_Case__c/fields/DIR_Lawsuit_Outcome__c.field-meta.xml
<CustomField>
    <fullName>DIR_Lawsuit_Outcome__c</fullName>
    <label>DIR Lawsuit Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Favor of DIR</fullName>
            </value>
            <value>
                <fullName>In Favor of Employer</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>