force-app/main/default/objects/DIR_Case__c/fields/DIR_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>DIR_Office_Address__c</fullName>
    <description>Used by Conga to pull Office Address the Office record related to the Internal Employee record related to the Case.</description>
    <formula>Assigned_Deputy__r.Office__r.Address_1__c + &quot;, &quot; + Assigned_Deputy__r.Office__r.Address_2__c + &quot; &quot; + Assigned_Deputy__r.Office__r.City__c + &quot;, &quot; + Assigned_Deputy__r.Office__r.State__c + &quot; &quot; + Assigned_Deputy__r.Office__r.Zip_Code__c</formula>
    <label>DIR Office Address</label>
    <type>Text</type>
</CustomField>