force-app/main/default/objects/DIR_Case__c/fields/DIR_Office_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>DIR_Office_Phone_Number__c</fullName>
    <description>Designed for use in the wage claim email notification template (when a claimant registers a claim).</description>
    <formula>Office__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIR Office Phone Number</label>
    <type>Text</type>
</CustomField>