force-app/main/default/objects/DIR_Case__c/fields/DIR_WCA_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>DIR_WCA_Office_Address__c</fullName>
    <description>This field is referenced in Email template which is sent out to WCA claim&#39;s Advocate who submits claim form via form assembly or his email is supplied in the claim</description>
    <formula>Office__r.Address_1__c + &quot;, &quot; + Office__r.Address_2__c + &quot; &quot; + Office__r.City__c + &quot;, &quot; + Office__r.State__c + &quot; &quot; + Office__r.Zip_Code__c</formula>
    <label>DIR WCA Office Address</label>
    <type>Text</type>
</CustomField>