force-app/main/default/objects/DIR_Case__c/fields/Disbursement_Clerk__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Clerk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Disbursement Clerk - Lookup to Internal Employee</description>
    <label>Disbursement Clerk</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Case Management (Disbursement Clerk)</relationshipLabel>
    <relationshipName>Case_Management3</relationshipName>
    <type>Lookup</type>
</CustomField>