force-app/main/default/objects/DIR_Case__c/fields/DLSE_Number__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Number__c</fullName>
    <description>DLSE Number</description>
    <label>DLSE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>