force-app/main/default/objects/DIR_Case__c/fields/DOL_Number__c.field-meta.xml
<CustomField>
    <fullName>DOL_Number__c</fullName>
    <description>DOL Number</description>
    <label>DOL Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>