force-app/main/default/objects/DIR_Case__c/fields/EDD_Number__c.field-meta.xml
<CustomField>
    <fullName>EDD_Number__c</fullName>
    <description>EDD Number</description>
    <label>EDD Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>