force-app/main/default/objects/DIR_Case__c/fields/EmailToClaimantSent__c.field-meta.xml
<CustomField>
    <fullName>EmailToClaimantSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailToClaimantSent</label>
    <type>Checkbox</type>
</CustomField>