force-app/main/default/objects/DIR_Case__c/fields/Employee_Filer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Filer_Name__c</fullName>
    <description>Employee Filer Name Text</description>
    <inlineHelpText>Employee Filer Name Text</inlineHelpText>
    <label>Employee/Filer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>