force-app/main/default/objects/DIR_Case__c/fields/Employee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_First_Name__c</fullName>
    <inlineHelpText>Do not enter a name in this box if it is blank. Later if you need to make a change to the Case Name, then edit the name in this box. Note: Editing the name in this box does not change the Account Name.</inlineHelpText>
    <label>Employee First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>