force-app/main/default/objects/DIR_Case__c/fields/Employee_Job_Duties__c.field-meta.xml
<CustomField>
    <fullName>Employee_Job_Duties__c</fullName>
    <description>EPA</description>
    <label>Employee Job Duties</label>
    <type>TextArea</type>
</CustomField>