force-app/main/default/objects/DIR_Case__c/fields/Employee_Job_Title_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Employee_Job_Title_Occupation__c</fullName>
    <description>EPA</description>
    <label>Employee Job Title / Occupation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>