force-app/main/default/objects/DIR_Case__c/fields/Employee_Sex_Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Employee_Sex_Race_Ethnicity__c</fullName>
    <description>EPA</description>
    <label>Employee Sex, Race/Ethnicity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>