force-app/main/default/objects/DIR_Case__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <label>Employee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Still Working for Employer</fullName>
            </value>
            <value>
                <fullName>Quit</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>