force-app/main/default/objects/DIR_Case__c/fields/Employee_Status_Other__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status_Other__c</fullName>
    <label>Employee Status Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>