force-app/main/default/objects/DIR_Case__c/fields/Employee_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Employee_Tenure__c</fullName>
    <formula>IF(
ISBLANK(Adverse_Action_Date__c),
(TEXT(FLOOR((DATEVALUE(File_Date_Time__c) - Date_of_Hire__c)/365.2425)) &amp; &quot; year(s)&quot;&amp;&quot;, &quot; &amp; 
TEXT(FLOOR(MOD((DATEVALUE(File_Date_Time__c) - Date_of_Hire__c),365.2425)/30)) &amp; &quot; month(s)&quot;&amp;&quot;, &quot;&amp; 
TEXT(Floor(MOD(Floor(MOD((DATEVALUE(File_Date_Time__c) - Date_of_Hire__c),365.2425)),30))) &amp; &quot; day(s)&quot;&amp;&quot;; total of &quot;&amp;TEXT(DATEVALUE(File_Date_Time__c) - Date_of_Hire__c)&amp;&quot; day(s)&quot;),


TEXT(FLOOR((Adverse_Action_Date__c - Date_of_Hire__c)/365.2425)) &amp; &quot; year(s)&quot;&amp;&quot;, &quot; &amp; 
TEXT(FLOOR(MOD((Adverse_Action_Date__c - Date_of_Hire__c),365.2425)/30)) &amp; &quot; month(s)&quot;&amp;&quot;, &quot;&amp; 
TEXT(Floor(MOD(Floor(MOD((Adverse_Action_Date__c - Date_of_Hire__c),365.2425)),30))) &amp; &quot; day(s)&quot;&amp;&quot;; total of &quot;&amp;TEXT(Adverse_Action_Date__c - Date_of_Hire__c)&amp;&quot; day(s)&quot; )</formula>
    <inlineHelpText>Adverse Action Date Minus Date of Hire. If Adverse Action Date is blank, leave field blank.</inlineHelpText>
    <label>Employee Tenure</label>
    <type>Text</type>
</CustomField>