force-app/main/default/objects/DIR_Case__c/fields/Employee_Total_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Employee_Total_Compensation__c</fullName>
    <description>EPA</description>
    <label>Employee Total Compensation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>