force-app/main/default/objects/DIR_Case__c/fields/EmployeesfromAccount__c.field-meta.xml
<CustomField>
    <fullName>EmployeesfromAccount__c</fullName>
    <description>Stores the number of employees from the account</description>
    <formula>Employer__r.NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stores the number of employees from the account</inlineHelpText>
    <label>EmployeesfromAccount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>